--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: build_dockerhub_image
+name: docker-image
 
 on:
   push:
@@ -10,12 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: cd dir
-      run: cd ./jdk
-    - name: build and push image
-      uses: docker/build-push-action@v1
+      name: Check out code
+    - uses: mr-smithers-excellent/docker-build-push@v5
+      name: Build & push Docker image
       with:
+        image: aulang/jdk
+        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: aulang/jdk
-        tags: latest
